cargo-features = ["named-profiles"]

[package]
name = "SHA-256"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = "1.1.1"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
